flash[:key] implemented

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -5,11 +5,13 @@ div.navbar {
   justify-content: space-between;
   align-items: center;
 
-  padding: 1.5rem 0.75rem;
+  padding: 1rem 0.75rem;
 }
 
 #brand-text {
   flex: 3;
+
+  font-weight: bold;
 }
 
 #nav-list {
@@ -19,6 +21,10 @@ div.navbar {
 
   display: flex;
   justify-content: space-between;
+}
+
+.nav-items {
+  font-size: 1.25rem;
 }
 
 #nav-list > li > a {
