--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
 
   <body>
     <%= render partial: "shared/navbar"%> 
-    <%= yield %>
+    
+    <div class="container-fluid">
+      <%= render partial: "shared/flash"%>
+      <%= yield %>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
