--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,6 @@
     <li><%= link_to "Home", home_path, class:"nav-items"%></li>
     <li><%= link_to "About Us", about_path, class:"nav-items"%></li>
     <li><%= link_to "Contact Us", contact_path, class:"nav-items"%></li>
-    <li><%= link_to "Service", home_path, class:"nav-items"%></li>
+    <li><%= link_to "Service", service_path, class:"nav-items"%></li>
   </ul>
 </div>
