Added Sign Up page, with route, submit not working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <body>
     <%= render partial: "shared/navbar"%> 
     
-    <div class="container-fluid">
+    <div class="container">
       <%= render partial: "shared/flash"%>
       <%= yield %>
     </div>
