Wrong password Error

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,8 +6,7 @@
   <ul id="nav-list">
     <%# link_to "TEXT", route, styling class/id:"value" %>
     <li><%= link_to "Home", home_path, class:"nav-items"%></li>
-    <li><%= link_to "About Us", about_path, class:"nav-items"%></li>
-    <li><%= link_to "Contact Us", contact_path, class:"nav-items"%></li>
-    <li><%= link_to "Service", service_path, class:"nav-items"%></li>
+    <li><%= link_to "Sign Up", sign_up_path, class:"nav-items"%></li>
+    <li><%= link_to "Login", sign_in_path, class:"nav-items"%></li>
   </ul>
 </div>
