--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
       crossorigin="anonymous"
     />
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %> <%=
-    javascript_importmap_tags %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
