--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,5 +8,6 @@
     <li><%= link_to "Home", home_path, class:"nav-items"%></li>
     <li><%= link_to "Sign Up", sign_up_path, class:"nav-items"%></li>
     <li><%= link_to "Login", sign_in_path, class:"nav-items"%></li>
+    <li><%= link_to "Log Out", logout_path, class:"nav-items"%></li>
   </ul>
 </div>
