--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -1,7 +1,7 @@
 <%# creating a form where i take in user & password & login if erverything is correct %>
 
 <%# form_with looks for an url based upon our model like it must do post-user, therefore we must have a post-request %>
-<%= form_with model: @user, url: sign_in_check_path, data: { turbo: false }  do |form| %>
+<%= form_with model: @user, url: sign_in_path, data: { turbo: false }  do |form| %>
 
     <%# if while sign-in there was an error, then we will display the message there itself, addinf the instace-object of @user is necessary %>
     <% if !@user.nil? && @user.errors.any? %>
